--- a/src/input.css
+++ b/src/input.css
@@ -37,12 +37,12 @@ select option {
 ::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px transparent;
-	background-color: black;
+	background-color: #fcfcfc;
 }
 
 ::-webkit-scrollbar
 {
-	width: 8px;
+	width: 6px;
 	background-color: #304B68;
 }
 
