--- a/src/input.css
+++ b/src/input.css
@@ -246,3 +246,21 @@ select option {
   color: #D3D3D3 !important;
   font-size: 16px /* text-lg */
 }
+
+
+
+
+/* chart css  */
+
+/* .chart-box {
+      background-color: #3B6A9D;
+      border-radius: 1rem;
+      padding: 1.5rem;
+      width: 320px;
+      height: 260px;
+    } */
+/* 
+    canvas {
+      width: 100% !important;
+      height: 100% !important;
+    } */
